<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_longrid"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lg_components_block"
        android:weightSum="4"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginBottom="42dp"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/lg_title"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="plug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="2"
                android:gravity="center"
                android:text="Статью прочитал: "
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <CheckBox
                android:gravity="center"
                android:id="@+id/lg_had_read"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:progress="0"
                android:text="Оцени статью: "
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_marginEnd="15dp"
                    android:id="@+id/lg_progress"
                    android:clickable="true"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:max="10"
                    android:progress="0"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/lg_progress_text"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="1/10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:textColor="@color/colorBlueStandard"
            android:textSize="18sp"
            android:id="@+id/lg_open"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:text="@string/open"
            android:layout_weight="1"
            android:layout_width="128dp"
            android:layout_height="0dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/plug_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Внутренние параметры лонгрида"
        android:visibility="visible"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>