<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/rotated_layout"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:gravity="center"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите Имя и Фамилию"
        app:startIconDrawable="@drawable/ic_portret"
        app:startIconContentDescription="Впишите в это поле ваши ФИ">

        <com.google.android.material.textfield.TextInputEditText
            android:focusableInTouchMode="true"
            android:background="@null"
            android:id="@+id/register_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@android:color/transparent"
        android:id="@+id/register_start"
        android:textColor="@color/colorBlueStandard"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:text="@string/register_btn"
        android:layout_width="185dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imgSr"
        android:src="@drawable/background_splashscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>